# DocDb

./: .gitignore  CMakeLists.txt  README.md
WSDON/: WSDONParser.cpp  WSDONParser.h
WSDON-Samples/: basicFile.wsdon  objectFile.wsdon
src/: CMakeLists.txt  main.cpp
src/DocumentGeneration/Indexing/: IndexDocumentGenerator.cpp  IndexDocumentGenerator.h
src/DocumentManagement/Docuemnts/CommonUtility/: DocumentUtility.cpp  DocumentUtility.h
src/DocumentManagement/Docuemnts/Data/: DataDocumentManager.cpp  DataDocumentManager.h
src/DocumentManagement/Documents/CommonUtility/: DocumentUtility.cpp  DocumentUtility.h
src/DocumentManagement/Documents/Data/: DataDocumentManager.cpp  DataDocumentManager.h
src/DocumentManagement/Documents/Indexing/: IndexDocumentManager.cpp  IndexDocumentManager.h  IndexSignatureDocumentManager.cpp  IndexSignatureDocumentManager.h
src/DocumentManagement/Documents/Structure/: DataDocument.h  DocumentMetaData.h  IndexDocument.h  IndexDocumentMetaData.h  IndexSignatureDocument.h  IndexSignatureDocumentMetaData.h
src/IO/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/IO/CommonUtility/: PathUtility.cpp  PathUtility.h
src/IO/FileSystem/: CrossFileSystemUtility.cpp  CrossFileSystemUtility.h
src/Tables/: Table.cpp  Table.h
src/Tables/Structure/: TableCreateData.h  TableInitData.h
src/WSDON/: WSDONParser.cpp  WSDONParser.h  WSDONSerializer.cpp  WSDONSerializer.h  WSDONUtility.cpp  WSDONUtility.h
src/WSDON/Structure/: WSDONDocument.h  WSDONObject.h  WSDONObjectDict.h
src/WSDON/Utility/: WSDONConverters.cpp  WSDONConverters.h  WSDONObjectUtility.cpp  WSDONObjectUtility.h
