cmake_minimum_required(VERSION 3.12)
project(DocDB)

set(CMAKE_CXX_STANDARD 14)

add_executable(DocDB main.cpp WSDON/WSDONParser.cpp WSDON/WSDONParser.h WSDON/WSDONUtility.cpp WSDON/WSDONUtility.h WSDON/WSDONSerializer.cpp WSDON/WSDONSerializer.h WSDON/Structure/WSDONDocument.h WSDON/Structure/WSDONObject.h IO/FileWriter.cpp IO/FileWriter.h IO/FileReader.cpp IO/FileReader.h DocumentManagement/Documents/Data/DataDocumentManager.cpp DocumentManagement/Documents/Data/DataDocumentManager.h DocumentManagement/Documents/Structure/DataDocument.h DocumentManagement/Documents/CommonUtility/DocumentUtility.cpp DocumentManagement/Documents/CommonUtility/DocumentUtility.h IO/FileSystem/CrossFileSystemUtility.cpp IO/FileSystem/CrossFileSystemUtility.h DocumentManagement/Documents/Structure/DocumentMetaData.h DocumentManagement/Documents/Indexing/IndexDocumentManager.cpp DocumentManagement/Documents/Indexing/IndexDocumentManager.h DocumentManagement/Documents/Structure/IndexDocument.h DocumentManagement/Documents/Structure/IndexDocumentMetaData.h)